Fixed all spacing, removed extra blog posts, changed banner

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,8 +10,9 @@ h1, h2, .heading-with-icon, h3, h4 {
     height: 500px;
 }
 .blog-category-inner {
-  max-height: 380px;
+  max-height: 350px;
 }
-.blog-category-title {
-  height: 80px;
+
+.basic-banner {
+  height: 400px;
 }
